@@ -1,20 +1,28 @@
 package com.melardev.spring.jwtoauth.config;
 
+import com.melardev.spring.jwtoauth.entities.User;
+import com.melardev.spring.jwtoauth.repositories.UserRepository;
 import com.melardev.spring.jwtoauth.security.jwt.AuthEntryPointJwt;
 import com.melardev.spring.jwtoauth.security.jwt.AuthTokenFilter;
 import com.melardev.spring.jwtoauth.security.oauth2.CustomOAuth2UserService;
 import com.melardev.spring.jwtoauth.security.oauth2.OAuth2AuthenticationSuccessHandler;
+import com.melardev.spring.jwtoauth.security.services.UserDetailsImpl;
 import com.melardev.spring.jwtoauth.security.services.UserDetailsServiceImpl;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.authentication.AuthenticationManager;
+import org.springframework.security.authentication.AuthenticationProvider;
+import org.springframework.security.authentication.BadCredentialsException;
+import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.authentication.dao.DaoAuthenticationProvider;
 import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
 import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.http.SessionCreationPolicy;
+import org.springframework.security.core.Authentication;
+import org.springframework.security.core.AuthenticationException;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
@@ -25,6 +33,7 @@ import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
 import java.util.List;
+import java.util.Optional;
 
 @Configuration
 @EnableWebSecurity
@@ -32,6 +41,9 @@ import java.util.List;
 public class SecurityConfig {
     @Autowired
     UserDetailsServiceImpl userDetailsService;
+
+    @Autowired
+    UserRepository userRepository;
 
     @Autowired
     private AuthEntryPointJwt unauthorizedHandler;
@@ -47,13 +59,44 @@ public class SecurityConfig {
         return new AuthTokenFilter();
     }
 
+    // Custom authentication provider that supports OAuth users with placeholder passwords
     @Bean
-    public DaoAuthenticationProvider authenticationProvider() {
-        DaoAuthenticationProvider authProvider = new DaoAuthenticationProvider();
+    public AuthenticationProvider customAuthenticationProvider() {
+        return new AuthenticationProvider() {
+            @Override
+            public Authentication authenticate(Authentication authentication) throws AuthenticationException {
+                String username = authentication.getName();
+                String password = authentication.getCredentials().toString();
 
+                // For OAuth2 controller using placeholder password
+                if ("placeholder".equals(password)) {
+                    Optional<User> userOptional = userRepository.findByUsername(username);
+                    if (userOptional.isPresent() && 
+                        userOptional.get().getProvider() != null && 
+                        !userOptional.get().getProvider().isEmpty()) {
+                        // This is an OAuth user, allow authentication with placeholder
+                        UserDetailsImpl userDetails = UserDetailsImpl.build(userOptional.get());
+                        return new UsernamePasswordAuthenticationToken(
+                            userDetails, null, userDetails.getAuthorities());
+                    }
+                }
+
+                // For regular password-based authentication, delegate to the standard provider
+                return null;
+            }
+
+            @Override
+            public boolean supports(Class<?> authentication) {
+                return authentication.equals(UsernamePasswordAuthenticationToken.class);
+            }
+        };
+    }
+
+    @Bean
+    public DaoAuthenticationProvider daoAuthenticationProvider() {
+        DaoAuthenticationProvider authProvider = new DaoAuthenticationProvider();
         authProvider.setUserDetailsService(userDetailsService);
         authProvider.setPasswordEncoder(passwordEncoder());
-
         return authProvider;
     }
 
@@ -88,10 +131,26 @@ public class SecurityConfig {
                         .successHandler(oAuth2AuthenticationSuccessHandler)
                 );
 
-        // Fix H2 console
-        http.headers(headers -> headers.frameOptions(frameOptions -> frameOptions.disable()));
+        // Configure security headers
+        http.headers(headers -> headers
+                .frameOptions(frameOptions -> frameOptions.disable())
+                .xssProtection(xss -> xss.disable())
+                .contentSecurityPolicy(csp -> csp
+                        .policyDirectives("frame-ancestors 'self'; " +
+                                "script-src 'self' https://accounts.google.com/gsi/client; " +
+                                "frame-src 'self' https://accounts.google.com/gsi/; " +
+                                "connect-src 'self' https://accounts.google.com/gsi/; " +
+                                "style-src 'self' https://accounts.google.com/gsi/style;"))
+                .addHeaderWriter((request, response) -> {
+                    response.setHeader("Cross-Origin-Opener-Policy", "same-origin-allow-popups");
+                    response.setHeader("Cross-Origin-Embedder-Policy", "require-corp");
+                    response.setHeader("Referrer-Policy", "no-referrer-when-downgrade");
+                }));
 
-        http.authenticationProvider(authenticationProvider());
+        // Add the custom provider first
+        http.authenticationProvider(customAuthenticationProvider());
+        // Then add the standard provider
+        http.authenticationProvider(daoAuthenticationProvider());
 
         http.addFilterBefore(authenticationJwtTokenFilter(), UsernamePasswordAuthenticationFilter.class);
 
@@ -101,12 +160,29 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("*"));
+        configuration.setAllowedOrigins(Arrays.asList(
+            "http://localhost:8080",
+            "http://localhost:5173",
+            "http://localhost"
+        ));
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("authorization", "content-type", "x-auth-token"));
-        configuration.setExposedHeaders(List.of("x-auth-token"));
+        configuration.setAllowedHeaders(Arrays.asList(
+            "authorization", 
+            "content-type", 
+            "x-auth-token",
+            "x-requested-with",
+            "x-xsrf-token",
+            "x-google-oauth-token",
+            "accept"
+        ));
+        configuration.setExposedHeaders(Arrays.asList("x-auth-token", "authorization"));
+        configuration.setAllowCredentials(true);
+        configuration.setMaxAge(3600L);
+
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", configuration);
+        source.registerCorsConfiguration("/api/**", configuration);
+        source.registerCorsConfiguration("/oauth2/**", configuration);
+        source.registerCorsConfiguration("/login/**", configuration);
         return source;
     }
 }
